# uv-monorepo-example

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.1  Dockerfile.1.merged  Dockerfile.merged  README.md  deploy.sh  pyproject.toml
a1/: pyproject.toml
a1/a1/: __init__.py
a2/: pyproject.toml
app-new/: pyproject.toml
apps/a1/: Dockerfile  Dockerfile.merged  pyproject.toml
apps/a2/: pyproject.toml
apps/a2/a2/: __init__.py
apps/app-new/: pyproject.toml
apps/app-new/app_new/: __init__.py
apps/printer/: pyproject.toml
apps/printer/tests/: test_printer_import.py
apps/printer/uv-monorepo-example/printer/: __init__.py
l1/: pyproject.toml
l2/: pyproject.toml
l2/src/l2/: __init__.py
lib-new/: pyproject.toml
lib-new/src/lib_new/: __init__.py
libs/greeter/: pyproject.toml
libs/greeter/tests/: test_greeter_import.py
libs/l1/: pyproject.toml
libs/l1/src/l1/: __init__.py
libs/l1/tests/: test_l1.py
libs/l2/: pyproject.toml
libs/l2/tests/: test_l2.py
